--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,20 +21,21 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li class="active"><a href="#"><%= t "header.home" %></a></li>
+		        
+		        <li class="active"><%= link_to root_path do %><%= t "header.home" %><% end %></li>
 		        <li><a href="#"><%= t "header.menu" %></a></li>
+		        
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t "header.categories" %><b class="caret"></b></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="#">Action</a></li>
-		            <li><a href="#">Another action</a></li>
-		            <li><a href="#">Something else here</a></li>
-		            <li class="divider"></li>
-		            <li><a href="#">Separated link</a></li>
-		            <li class="divider"></li>
-		            <li><a href="#">One more separated link</a></li>
+		            <li>
+			          <% @categories.each do |t| %>
+			             <%= link_to t.name, root_url(food_category: t.id), class: "hot-topic", remote: true %>
+			           <% end %>
+                    </li>
 		          </ul>
 		        </li>
+
 		        <li><a href="#"><%= t "header.promotion" %></a></li>
 		        <li><a href="#"><%= t "header.contact_us" %></a></li>
 
